--- a/index.html
+++ b/index.html
@@ -36,9 +36,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            background-image: url('https://via.placeholder.com/1920x600');
+            background-image: url('https://source.unsplash.com/1920x600/?restaurant,dining');
             background-size: cover;
-            height: 600px;
+            background-position: center;
+            height: 100vh;
             color: white;
             text-align: center;
             flex-direction: column;
@@ -64,10 +65,11 @@
             background: #C0392B;
         }
         .content {
-            padding: 20px;
+            padding: 40px 20px;
+            text-align: center;
         }
         .section-title {
-            font-size: 2rem;
+            font-size: 2.5rem;
             text-align: center;
             margin: 20px 0;
         }
@@ -142,10 +144,10 @@
     <section class="content" id="gallery">
         <h2 class="section-title">Gallery</h2>
         <div class="gallery">
-            <img src="https://via.placeholder.com/300" alt="Dish 1">
-            <img src="https://via.placeholder.com/300" alt="Dish 2">
-            <img src="https://via.placeholder.com/300" alt="Dish 3">
-            <img src="https://via.placeholder.com/300" alt="Dish 4">
+            <img src="https://source.unsplash.com/300x300/?food,plate" alt="Dish 1">
+            <img src="https://source.unsplash.com/300x300/?gourmet,dish" alt="Dish 2">
+            <img src="https://source.unsplash.com/300x300/?restaurant,meal" alt="Dish 3">
+            <img src="https://source.unsplash.com/300x300/?fine-dining" alt="Dish 4">
         </div>
     </section>
     <section class="content" id="reservation">
